[gd_scene load_steps=2 format=3 uid="uid://dvv1p7lfkb6sd"]

[ext_resource type="Script" path="res://src/main_menu/main_menu.gd" id="1_miujf"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_miujf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -86.0
offset_right = 86.0
offset_bottom = 47.0
grow_horizontal = 2
text = "Chicken Invaders?"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -65.0
offset_right = 49.5
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonMissions" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Missions"

[node name="ButtonShop" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Shop"

[node name="ButtonQuit" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/ButtonMissions" to="." method="_on_button_missions_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ButtonShop" to="." method="_on_button_shop_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
